Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554}\n",
     "greenville.values()\n",
-    "list(greenville.values('population'))"
+    "list(greenville.values('pop"
    ]
   },
   {
