Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,22 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_values([68, 'Greenville', 'USA', 84554])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "greenville_population = greenville"
+    "greenville_population = greenville['Population']\n",
+    "greenville_popu"
    ]
   },
   {
