Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -443,13 +443,13 @@
        "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = list.(cities[11])\n",
+    "pyeongchang_values = list(cities[11])\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]"
    ]
